--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,152 @@
-body{
+*{
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100vh;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto',sans-serif;
+
+}
+
+body{
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,
     url(/images/inicio.jpg);
     background-size: cover;
-    background-position-y: 70%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
   }
+  
+main {
+    width: 100%;
+    padding: 20px;
+    margin: auto;
+    margin-top: 250px;
+}
+
+.main__container {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    position: relative;
+}
+
+.information__container {
+    width: 100%;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(145, 203, 226, 0.8);
+}
+.information__container div {
+    margin: 100px 40px;
+    
+    transform: all 300ms;
+    color: black;
+
+}
+
+.information__container div p,
+.information__container div button {
+margin-top: 30px;
+}
+
+.information__container div h3 {
+    font-size: 26px;
+    font-weight: 400;
+}
+.information__container div button {
+    padding: 10px 40px;
+    border: 2px solid black;
+    background: transparent;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 500ms;
+}
+
+.information__container div button:hover {
+    background: rgba(2, 69, 95, 0.829);
+    color: white;
+}
+.forms__container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 380px;
+    position: relative;
+    top: -185px;
+    left: 20px;
+    transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+}
+.forms__container form {
+    width: 100%;
+    padding: 80px 20px;
+    background: white;
+    position: absolute;
+    border-radius: 20px;
+}
 
 
+.forms__container form h2 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.forms__container form input {
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px;
+    border: none;
+    background: rgba(209, 209, 209, 0.226);
+    font-size: 14px;
+    outline: none;
+}
+
+.forms__container form button {
+    padding: 10px 40px;
+    margin-top: 20px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    color: white;
+    background: rgba(69, 162, 196, 0.8);
+    cursor: pointer;
+}
+
+.forms__container-login {
+    opacity: 1;
+    display: block;
+}
+
+.forms__container-register {
+    display: none;
+}
+
+@media screen and (max-width: 850px){
+
+    main{
+        margin-top: 50px;
+    }
+    .information__container{
+        max-width: 350px;
+        height: 300px;
+        flex-direction: column;
+        margin: auto;
+    }
+    .information__container div{
+        margin: 0px;
+        position: absolute;
+    }
+    .forms__container {
+        top: -10px;
+        left: 5px;
+        margin: auto;
+    }
+    .forms__container form {
+        position: relative;
+    }
+}
