--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,7 @@ main {
     width: 100%;
     padding: 20px;
     margin: auto;
-    margin-top: 250px;
+    margin-top: 180px;
 }
 
 .main__container {
@@ -115,6 +115,12 @@ margin-top: 30px;
     color: white;
     background: rgba(69, 162, 196, 0.8);
     cursor: pointer;
+    transition: all 500ms;
+}
+
+.forms__container form button:hover {
+    background: rgba(150, 185, 197, 0.555);
+    color: black;
 }
 
 .forms__container-login {
