--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,19 +23,23 @@
 
 
           <div class="forms__container">
-            <form action="" class="forms__container-login">
+            <form name="login_form" action="" method="" class="forms__container-login">
               <h2>Iniciar sesión</h2>
-              <input type="text" placeholder="DNI">
-              <input type="password" placeholder="Contraseña">
-              <button>Ingresar</button>
+              <input type="text" name="dni" placeholder="DNI">
+              <input type="password" name="password" placeholder="Contraseña">
+              <button id="login">Ingresar</button>
             </form>
 
-            <form action="" class="forms__container-register">
+            <form name="register_form" action="" method="" class="forms__container-register">
               <h2>Registrarse</h2>
-              <input type="text" placeholder="Nombres y Apellidos">
-              <input type="text" placeholder="DNI">
-              <input type="password" placeholder="Contraseña">
-              <button>Registrarse</button>
+              <input type="number" name="dni" placeholder="DNI">
+              <input type="text" name="nombre"  placeholder="Nombres">
+              <input type="text" name="paterno" placeholder="Apellido Paterno">
+              <input type="text" name="materno" placeholder="Apellido Materno">
+              <input type="password" name="password" placeholder="Contraseña">
+              <input type="number" name="verification"placeholder="Codigo Verificación">
+              
+              <button id="register">Registrarse</button>
             </form>
           </div>
       </div>
