--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,5 +12,6 @@
     <h3>awa de uwu</h3>
     <h4>awa de uwu</h4>
     <h5>awa de uwu</h5>
+    <img src="/public/images/MINSA.jpg" alt="MINSA">
 </body>
 </html>
