--- a/views/usuario.ejs
+++ b/views/usuario.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenida Usuario</title>
-    <link rel="stylesheet" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="/css/usuario.css">
+
 </head>
 <body>
     
@@ -21,8 +21,8 @@
                 </div>
                 
 
-                <div class="col m-4">
-                    <div class="d-flex flex-row-reverse">
+                <div class="col">
+                    <div class="d-flex flex-row-reverse minsa">
                         <img src="/images/MINSA.jpg" alt="MINSA">
                     </div>
                    
@@ -61,7 +61,14 @@
                                       </svg>
                                       
                                 </div>
+
+                                <div class="p-3">
+                                    <button type="button" class="btn btn-primary">Perfil</button>
+                                </div>
                                
+                                <div class="p-3">
+                                    <button type="button" class="btn btn-primary">Inicio</button>
+                                </div>
                                   
                             </div>
                         </div>
@@ -71,32 +78,34 @@
         </div>
     </header>
 
-    <div>
-        <div class="row">
-            <div class="col">
-                <h1>Comentarios</h1>
-
-                <div class="row">
-
-                </div>
-
-                <div class="row">
-
-                </div>
-
-                <div class="row">
-
-                </div>
-                
-            </div>
-            
-            <div class="col">
-                <H1>Noticias relacionadas</H1>
-            </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/images/Noticia1.jpeg" class="d-block w-100" alt="Noticia1">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/Noticia2.jpg" class="d-block w-100" alt="Noticia2">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/Noticia3.jpg" class="d-block w-100" alt="Noticia3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-
+      <img src="" alt="">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
