--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -1,16 +1,77 @@
 .carousel-item> img {
-    width: 100%; 
+    width: auto; 
     height: 480px; 
    }
 
 @media screen and (min-width: 850px) {
     .carousel-item> img {
-        width: 100%; 
+        width: auto; 
         height: 720px; 
        }
 }
+
+.doctor> img {
+    width: 100px; 
+    height: 100px;
+    margin-top: 60%;
+   }
 
 .minsa {
     height: 70%;
     width: 70%;
 }
+
+#content-minsa {
+    position: relative;
+}
+#content-minsa img {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.cuadrado{
+    padding:5px;
+    background-color: #75cec97a;
+    padding: 3px 10px;
+    border: PowderBlue 5px solid;
+    border-radius: 20px;
+    color: white;
+    margin-top: 10%;
+    height: 100px;
+    }
+
+    /* balblasd */
+
+    .bmenu ul{
+        list-style:none;
+        margin:0;
+        padding:0;
+        background-color: rgba(97, 230, 130, 0.473);
+    }
+
+    .bmenu ul li{
+        display: inline-block;
+    }
+
+    .bmenu ul li a{
+        color:black;
+        text-decoration:none;
+        display:block;
+        font-size: 25px;
+        padding:25px 60px;
+    }
+
+    .bmenu ul li a svg{
+        margin: -8px;
+    }
+
+    .bmenu ul li a:hover{
+        background-color: red;
+    }
+
+
+
+    .item-r{
+        float:right;
+    }
