--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -3,12 +3,7 @@
     height: 480px; 
    }
 
-@media screen and (min-width: 850px) {
-    .carousel-item> img {
-        width: auto; 
-        height: 720px; 
-       }
-}
+
 
 .doctor> img {
     width: 100px; 
@@ -16,18 +11,16 @@
     margin-top: 60%;
    }
 
-.minsa {
-    height: 70%;
-    width: 70%;
-}
 
-#content-minsa {
+.logo-minsa {
     position: relative;
 }
-#content-minsa img {
-    position: absolute;
-    top: 0px;
-    right: 0px;
+.logo-minsa img {
+    float: right;
+    width: 100%;
+    max-height: 150px;
+    max-width: 500px;
+    height: 100%;
 }
 
 .cuadrado{
@@ -37,12 +30,15 @@
     border: PowderBlue 5px solid;
     border-radius: 20px;
     color: white;
-    margin-top: 10%;
     height: 100px;
     }
 
     /* balblasd */
+    .bmenu {
+        width: 100%;
+        height: 40px;
 
+    }
     .bmenu ul{
         list-style:none;
         margin:0;
@@ -58,20 +54,30 @@
         color:black;
         text-decoration:none;
         display:block;
-        font-size: 25px;
+        font-size: 14px;
         padding:25px 60px;
     }
 
-    .bmenu ul li a svg{
-        margin: -8px;
-    }
 
-    .bmenu ul li a:hover{
+    .item-r {
+        float:right;
+    }
+    .item-r:hover {
         background-color: red;
     }
+    .item-r a:hover {
+        background-color: red;
+    }
+ 
+    
+    @media screen and (min-width: 850px) {
+        .carousel-item> img {
+            width: auto; 
+            height: 720px; 
+           }
+        .bmenu ul li a{
+            font-size: 25px;
+        }
 
-
-
-    .item-r{
-        float:right;
+    
     }
