--- a/views/usuario.ejs
+++ b/views/usuario.ejs
@@ -21,44 +21,43 @@
                 </div>
                 <div class="col">
                     <div class="logo-minsa">
-                            <img src="/images/MINSA.jpg" alt="MINSA">
+                            <img class="img-sc" src="/images/MINSA.jpg" alt="MINSA">
                     </div> 
                 </div>
                 
             </div>
-               
-        
 
-            <div class="bmenu">
-                <ul>
-                    <li><a>¡Bienvenido Usuario!</a></li>
-                    <li class="item-r">
-                        <a href="#">    
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+        <header class="header">
+            <div class="logo-nav-container">
+                <a href="#" class="logo">BIENVENIDO</a>
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                               </svg>
-                        </a>
-                    </li>
-                    <li class="item-r">
-                        <a href="#">    
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+                        </a></li>
+                        <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
                                 <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
                                 <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
                             </svg>
-                        </a>
-                    </li>
-                    <li class="item-r">
-                        <a href="#">    
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                        </a></li>
+                        <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
                                 <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
                               </svg>
-                        </a>
-                    </li>
-                    <li class="item-r"><a href="#">Perfil</a></li>
-                    <li class="item-r"><a href="#">Inicio</a></li>
-                </ul>
-            </div>                
+                        </a></li>
+                        <li><a href="#">Perfil</a></li>
+                        <li><a href="#">Inicio</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>    
+               
+    
+    <!-- las imagenes desplegadas de achim -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,49 +85,62 @@
         </button>
       </div>
 
-      <div class="row">
+    <!-- termino sus imagenes -->
+
+      <div class="row others">
           
         
 
-        <div class="col">
-
+        <div class="col-3">
+            <div class="row m-2 others">
+                <img  
+                src="/images/Doctor.jpg" 
+                alt="Doctor">
+        
+            </div>              
         </div>
 
-        <div class="col">
+        <div class="col-6">
 
-            <div class="row">
+            <div class="row m-4 comentary">
                 
-                <div class="col-2 doctor"> 
-                    <img src="/images/Doctor.jpg" alt="Doctor">
+                <img class="img-dc" src="/images/Doctor.jpg" alt="Doctor">
+                <div class="m-1 comentary-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
                 </div>
-                
-                <div class="col-10"> 
-                    <div class="cuadrado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.</div>
-                </div>
+            </div>
 
-                <div class="col-2 doctor"> 
-                    <img src="/images/Doctor.jpg" alt="Doctor">
+            <div class="row m-4 comentary">
+                <img class="img-dc" src="/images/Doctor.jpg" alt="Doctor">
+                <div class="m-1 comentary-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
                 </div>
-                
-                <div class="col-10"> 
-                    <div class="cuadrado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.</div>
-                </div>
-                
             </div>
             
         </div>
 
-        <div class="col">
 
+        <div class="col-3">
+            <div class="row m-2 others">
+                <img  
+                src="/images/Doctor.jpg" alt="Doctor">
+        
+            </div>              
         </div>
 
-      </div>
 
-      <div>
-          <h1>hoal</h1>
-      </div>
+    </div>
+
+
+      <footer class="footer">
+          <div class="container">
+              <p>Derechos reservados Grupo 1 Software II - 2021</p>
+          </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+
 
 </body>
 </html>
