--- a/views/usuario.ejs
+++ b/views/usuario.ejs
@@ -94,8 +94,8 @@
         <div class="col-3">
             <div class="row m-2 others">
                 <img  
-                src="/images/Doctor.jpg" 
-                alt="Doctor">
+                src="/images/MinsaFolleto1.jpg" 
+                alt="MinsaFolleto">
         
             </div>              
         </div>
@@ -104,14 +104,14 @@
 
             <div class="row m-4 comentary">
                 
-                <img class="img-dc" src="/images/Doctor.jpg" alt="Doctor">
+                <img class="img-fluid img-doctor" src="https://www.meme-arsenal.com/memes/fdd1a0f140aa6dfdc0fc0550e67b7736.jpg" alt="Doctor">
                 <div class="m-1 comentary-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
                 </div>
             </div>
 
             <div class="row m-4 comentary">
-                <img class="img-dc" src="/images/Doctor.jpg" alt="Doctor">
+                <img class="img-fluid img-doctor" src="/images/Doctor.jpg" alt="Doctor">
                 <div class="m-1 comentary-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
                 </div>
@@ -123,7 +123,7 @@
         <div class="col-3">
             <div class="row m-2 others">
                 <img  
-                src="/images/Doctor.jpg" alt="Doctor">
+                src="/images/MinsaFolleto2.jpg" alt="MinsaFolleto">
         
             </div>              
         </div>
