Chat con el doctor

--- a/views/DatosPersonales.ejs
+++ b/views/DatosPersonales.ejs
@@ -16,6 +16,9 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/DatosPersonalesCSS.css">
     <link rel="stylesheet" href="/css/usuario.css">
+    <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=22330404-1a48-48fc-9661-aa730165bb5e"> </script>
+<!-- End of  Zendesk Widget script -->
 </head>
 
 <body>
