--- a/views/HistorialClinico.ejs
+++ b/views/HistorialClinico.ejs
@@ -99,9 +99,37 @@
                     </div>
 
                 </div>
-                <div class="row">
-                    <div class="col">
-                        
+                <div class="row pt-3">
+                    <div class="col-5">
+                        <h4>Enfermedad del paciente</h4>
+                        <div class="col Container2">
+                            <div class="row">
+                                <div class="col">
+                                    <ul>
+                                        <li>Diabetes</li>
+                                        <li>Cancer</li>
+                                    </ul>
+                                </div>
+                                <div class="col">
+                                    <ul>
+                                        <li>Diabetes</li>
+                                        <li>Cancer</li>
+                                        <li>Craneosinostosis</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="col-2"></div>
+                    <div class="col-5">
+                        <h4>Medicamentos para el paciente</h4>
+                        <div class="col Container2">
+                            <ul>
+                                <li>Azul de Prusia​</li>
+                                <li>Cafeína Citrato</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -110,13 +138,17 @@
 
             </div>
             <div class="col">
-                <h3>Medicamento del paciente</h3>
+                <h4>Subir más información sobre tu historial clínico</h4>
                 <div class="Medicamento">
-                    
+                    <input class="btn-secondary" type="file" name="archivosubido">
                 </div>
-
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <p>Derechos reservados Grupo 1 Software II - 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
