--- a/views/usuario.ejs
+++ b/views/usuario.ejs
@@ -7,6 +7,9 @@
     <title>Bienvenida Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/usuario.css">
+    <!-- Start of  Zendesk Widget script -->
+    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=22330404-1a48-48fc-9661-aa730165bb5e"> </script>
+    <!-- End of  Zendesk Widget script -->
 
 </head>
 <body>
