--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -1,3 +1,13 @@
+
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background: #F7FAFA;
+}
+
+
 .carousel-item> img {
     width: auto; 
     height: 480px; 
