--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/footer.css">
 <footer class="footer">
     <div class="container">
-        <p>Derechos reservados Grupo 1 Software II - 2021</p>
+        <p>Copyright © 2021 DreamTeam | Todos los derechos reservados</p>
     </div>
 </footer>
