--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,19 @@
 .footer {
-    background: #707070;
+    height: 6rem;
+    background: #3a3a3a;
     padding: 1rem 0;
     text-align: center;
     font-size: 1rem;
+    font-family: 'Varela Round',sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    margin-top: auto;
+
 }
 
 .footer p{
-    margin:0
+    margin:0;
+    color: white;
 }
