--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -3,7 +3,7 @@
     <img class="logo" src="images/logo_minsa.png" alt="logo">
     <nav>
         <ul class="nav__links">
-            <li><a href="/usuario">Inicio</a></li>
+            <li><a href="/inicio">Inicio</a></li>
             <li><a href="/DatosPersonales">Perfil</a></li>
         </ul>
     </nav>
