--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -59,45 +59,47 @@
       </div>
 
     <!-- termino sus imagenes -->
-      <div class="row others">
-        <div class="col-3">
-            <div class="row m-2 others">
-                <img  
-                src="/images/MinsaFolleto1.jpg" 
-                alt="MinsaFolleto">
-        
-            </div>              
+    
+      <section class="comments">
+        <div class="comments__heading">
+          <span>Comentarios</span>
+          
         </div>
-
-        <div class="col-6">
-
-            <div class="row m-4 comentary">
-                
-                <img class="img-fluid img-doctor" src="https://www.meme-arsenal.com/memes/fdd1a0f140aa6dfdc0fc0550e67b7736.jpg" alt="Doctor">
-                <div class="m-1 comentary-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
+        <div class="comments__container">
+          <div class="comment__box">
+            <div class="comment__heading">
+              <div class="comment__profile">
+                <div class="profile__image">
+                  <img src="/images/user1.jpg">
                 </div>
-            </div>
-
-            <div class="row m-4 comentary">
-                <img class="img-fluid img-doctor" src="/images/Doctor.jpg" alt="Doctor">
-                <div class="m-3 comentary-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut porttitor massa. Aenean vitae condimentum risus, nec feugiat risus. Vivamus ac condimentum eros.
+                <div class="profile__username">
+                  <strong>Croncker</strong>
+                  <span>@elviscrock</span>
                 </div>
+              </div>
             </div>
-            
+            <div class="comment__content">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+          </div>
+          <div class="comment__box">
+            <div class="comment__heading">
+              <div class="comment__profile">
+                <div class="profile__image">
+                  <img src="/images/user2.jpg">
+                </div>
+                <div class="profile__username">
+                  <strong>Achim</strong>
+                  <span>@TheAchim4000</span>
+                </div>
+              </div>
+            </div>
+            <div class="comment__content">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+          </div>
         </div>
-        <div class="col-3">
-            <div class="row m-2 others">
-                <img  
-                src="/images/MinsaFolleto2.jpg" alt="MinsaFolleto">
-        
-            </div>              
-        </div>
-
-
-    </div>
-  
+      </section>
 
 
     <%- include("layouts/footer") %>
