--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -20,9 +20,9 @@
     <!--menu-->        
        
     <%- include("layouts/navbar") %>           
-    <div class="container">
+    <div class="container" style="margin-top: 20px">
     <!-- las imagenes desplegadas de achim -->
-      <div id="news__carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div id="news__carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" >
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#news__carousel" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#news__carousel" data-bs-slide-to="1"></button>
@@ -30,22 +30,10 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" style="background-image: url(/images/Noticia1.jpeg)">
-              <div class="carousel-caption d-none d-md-block">
-                <h1>Primera noticia</h1>
-                <p>El awa de uwu es vida</p>
-              </div>
             </div>
             <div class="carousel-item" style="background-image: url(/images/Noticia2.jpg)">
-              <div class="carousel-caption d-none d-md-block">
-                <h1>Segunda noticia</h1>
-                <p>El awa de uwu es vida</p>
-              </div>
             </div>
             <div class="carousel-item" style="background-image: url(/images/Noticia3.jpg)">
-              <div class="carousel-caption d-none d-md-block">
-                <h1>Tercera noticia</h1>
-                <p>El awa de uwu es vida</p>
-              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#news__carousel" data-bs-slide="prev">
@@ -61,11 +49,16 @@
     <!-- termino sus imagenes -->
     
       <section class="comments">
+        
         <div class="comments__heading">
           <span>Comentarios</span>
           
         </div>
+        <div class="comments__panflets">
+          <img src="/images/MinsaFolleto1.jpg">
+        </div>
         <div class="comments__container">
+          
           <div class="comment__box">
             <div class="comment__heading">
               <div class="comment__profile">
@@ -98,6 +91,27 @@
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
           </div>
+          <div class="comment__box">
+            <div class="comment__heading">
+              <div class="comment__profile">
+                <div class="profile__image">
+                  <img src="/images/user3.jpg">
+                </div>
+                <div class="profile__username">
+                  <strong>Megatroud</strong>
+                  <span>@TrouxR</span>
+                </div>
+              </div>
+            </div>
+            <div class="comment__content">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+          </div>
+
+          
+        </div>
+        <div class="comments__panflets">
+          <img src="/images/MinsaFolleto1.jpg">
         </div>
       </section>
 
