Corrección de vista de perfil - Todo

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,10 +1,12 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/navbar.css">
 <header>
     <img class="logo" src="images/logo_minsa.png" alt="logo">
     <nav>
         <ul class="nav__links">
             <li><a href="/inicio">Inicio</a></li>
-            <li><a href="/DatosPersonales">Perfil</a></li>
+            <li><a href="/perfil">Perfil</a></li>
         </ul>
     </nav>
     <a class="button__logout" href="#"><button>Logout</button></a>
