--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,8 @@
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 .footer {
     height: 6rem;
     background: #3a3a3a;
