--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -75,7 +75,7 @@
         <div class="box__col">
             <div class="calendar">
                 <div class="calendar__month">
-                    <i class="fas fa-angle-left next"></i>
+                    <i class="fas fa-angle-left prev"></i>
                     <div class="calendar__date">
                         <h1>Octubre</h1>
                         <p>Viernes, 29 de Octubre de 2021</p>
@@ -83,13 +83,13 @@
                     <i class="fas fa-angle-right next"></i>
                 </div>
                 <div class="calendar__weeks">
+                    <div>Dom</div>
                     <div>Lun</div>
                     <div>Mar</div>
                     <div>Mie</div>
                     <div>Jue</div>
                     <div>Vie</div>
                     <div>Sab</div>
-                    <div>Dom</div>
                 </div>
                 <div class="calendar__days">
                     <div class="prev-date">26</div>
@@ -140,6 +140,7 @@
   
   
     </div>
+    <script src="/js/perfil.js"></script>
       
     <%- include("layouts/footer") %>
 </body>
