Corrección de vista de historial - Solo html y css

--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -23,7 +23,7 @@
                     <img src="/images/user1.jpg" alt="">
                     <h4>Croncker</h4>
                     <p>@elviscrock</p>
-                    <button onclick="window.location.href='/HistorialClinico'">Historial clínico</button>
+                    <button onclick="window.location.href='/historial'">Historial clínico</button>
                 </div>
                 <div class="right__container">
                     <div class="info__container">
